@@ -18,6 +18,7 @@ BuildRequires:  perl(DBI)
 BuildRequires:  perl(Devel::StackTrace) >= 1.30
 BuildRequires:  perl(Digest::SHA1)
 BuildRequires:  perl(Encode)
+BuildRequires:  perl(Encode::Locale)
 BuildRequires:  perl(File::Basename)
 BuildRequires:  perl(File::Copy)
 BuildRequires:  perl(File::HomeDir)
@@ -79,6 +80,7 @@ Requires:       perl(DateTime)
 Requires:       perl(Devel::StackTrace) >= 1.30
 Requires:       perl(Digest::SHA1)
 Requires:       perl(Encode)
+Requires:       perl(Encode::Locale)
 Requires:       perl(File::Basename)
 Requires:       perl(File::Copy)
 Requires:       perl(File::HomeDir)
